# jeonghyeon

./: CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
