[package]
name = "jeonghyeon"
version = "0.2.11"
description = "Developer workspace with Jira integration, terminal, and Git tools"
authors = ["Jeonghyeon Kim"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jeonghyeon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2.5.6"
tauri-plugin-dialog = "2"
portable-pty = "0.8"
dirs = "6"
libc = "0.2"
sysinfo = "0.31"

